--- a/src/App.scss
+++ b/src/App.scss
@@ -23,7 +23,6 @@
     background-color: var(--mainColor);
     width: 100vw;
     height: 100vh;
-    position: relative;
     padding: 200px 100px;
     color: var(--fontColor);
     display: flex;
@@ -31,6 +30,7 @@
 
 .Left {
     flex: 1;
+    width: 36rem;
 
     // Text Section
     .TextSection {
@@ -93,9 +93,9 @@
 
     // Chart Section
     .ChartSection {
-        margin-top: 6rem;
-        width: 40rem;
-        height: 24rem;
+        margin-top: 4rem;
+        width: 38rem;
+        height: 22rem;
         position: relative;
         background-image: url('../public/images/virusTop.svg');
         background-repeat: no-repeat;
@@ -123,6 +123,7 @@
 
 .Right {
     flex: 1.5;
+    margin-left: 10rem;
 
     // Text Section
     .PictureSection {
@@ -137,13 +138,22 @@
             color: var(--white);
             transform-origin: 50% 50%;
             transform: scale(1);
-            // transition: all 2s ease-in-out;
             animation: shaking 5s ease-in-out infinite;
         }
     }
 
-    // Chart Section
-    .SliderSection {}
+    .SliderSection {
+        margin-top: 5rem;
+        width: 63.5rem;
+
+        .title {
+            font-size: 1.5rem;
+            font-weight: bold;
+            text-transform: uppercase;
+            margin-bottom: 1rem;
+        }
+
+    }
 }
 
 .loading {
