--- a/src/App.scss
+++ b/src/App.scss
@@ -21,7 +21,7 @@
 
 .App {
     background-color: var(--mainColor);
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     padding: 200px 100px;
     color: var(--fontColor);
